themeオブジェクトの作成と仮データを画面に表示する

--- a/src/app/theme/theme.component.html
+++ b/src/app/theme/theme.component.html
@@ -1,3 +1,3 @@
-<p>
-  theme works!
-</p>
+<h2>title:{{ theme.title }}</h2>
+<div><span>themeId: </span>{{theme.themeId}}</div>
+<div><span>content: </span>{{theme.content}}</div>
