--- a/src/app/theme/theme.component.html
+++ b/src/app/theme/theme.component.html
@@ -1,3 +1,16 @@
-<h2>title:{{ theme.title }}</h2>
-<div><span>themeId: </span>{{theme.themeId}}</div>
-<div><span>content: </span>{{theme.content}}</div>
+<ul class="themes">
+  <li *ngFor="let theme of themes"
+    [class.selected]="theme === selectedTheme"
+    (click)="onSelect(theme)">
+    <span class="badge">{{theme.themeId}}</span> {{theme.title}}
+  </li>
+</ul>
+
+<div *ngIf="selectedTheme">
+<div><span>themeId: </span>{{selectedTheme.themeId}}</div>
+  <div class="form-group">
+    <label class="badge-info">title:
+      <input [(ngModel)]="selectedTheme.title" placeholder="title" class="form-control" >
+    </label>
+  </div>
+</div>
