「ng generate module app-routing --flat --module=app」の実行 「ng generate component dashboard」の実行

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,8 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<app-theme></app-theme>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/theme">Theme</a>
+</nav>
+<router-outlet></router-outlet>
