--- a/src/app/material/material.component.html
+++ b/src/app/material/material.component.html
@@ -1,3 +1,4 @@
+<button (click)="goBack()">go back</button>
 <div *ngIf="theme">
 <div><span>themeId: </span>{{theme.themeId}}</div>
   <div class="form-group">
