下記対応を行う。 ・HTTP通信を行いテーマの更新を行う処理を追加。 ・HTTP通信を行いテーマの追加を行う処理を追加。 ・HTTP通信を行いテーマの削除を行う処理を追加。 ・HTTP通信を行いテーマのリスト取得を行う処理を追加。 ・HTTP通信を行いテーマの取得を行う処理を追加。

--- a/src/app/theme/theme.component.html
+++ b/src/app/theme/theme.component.html
@@ -1,7 +1,19 @@
+<div>
+  <label>Theme title:
+    <input #themeTitle />
+  </label>
+  <!-- (click) 入力値をadd()に渡したあと、入力をクリアする -->
+  <button (click)="add(themeTitle.value); themeTitle.value=''" class="btn btn-primary">
+    add
+  </button>
+</div>
+
 <ul class="themes">
   <li *ngFor="let theme of themes">
     <a routerLink="/detail/{{theme.themeId}}">
       <span class="badge">{{theme.themeId}}</span> {{theme.title}}
     </a>
+    <button class="delete" title="delete theme" class="btn btn-danger"
+    (click)="delete(theme)">delete</button>
   </li>
 </ul>
