--- a/src/app/material/material.component.html
+++ b/src/app/material/material.component.html
@@ -1,4 +1,4 @@
-<button (click)="goBack()">go back</button>
+<button (click)="goBack()" class="btn btn-default">go back</button>
 <div *ngIf="theme">
 <div><span>themeId: </span>{{theme.themeId}}</div>
   <div class="form-group">
@@ -7,3 +7,4 @@
     </label>
   </div>
 </div>
+<button (click)="save()" class="btn btn-primary">save</button>
