--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<div class="container">
+  <div style="text-align:center">
+    <h1>
+      俺のメモ帳
+    </h1>
+  </div>
+  <nav>
+    <a routerLink="/dashboard">Dashboard</a>
+    <a routerLink="/theme">Theme</a>
+  </nav>
+  <router-outlet></router-outlet>
 </div>
-<nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/theme">Theme</a>
-</nav>
-<router-outlet></router-outlet>
