テーマの内容と更新が出来るよう修正

--- a/src/app/material/material.component.html
+++ b/src/app/material/material.component.html
@@ -5,6 +5,9 @@
     <label class="badge-info">title:
       <input [(ngModel)]="theme.title" placeholder="title" class="form-control" >
     </label>
+    <label class="badge-info">content:
+      <input [(ngModel)]="theme.content" placeholder="content" class="form-control" >
+    </label>
   </div>
 </div>
 <button (click)="save()" class="btn btn-primary">save</button>
