--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,19 @@
-<div class="container">
-  <div style="text-align:center">
-    <h1>
-      俺のメモ帳
-    </h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="/theme">Theme</a>
+      </li>
+    </ul>
   </div>
-  <nav>
-    <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/theme">Theme</a>
-  </nav>
+</nav>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
