--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/dashboard">トップページ</a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">トップページ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/theme">テーマ</a>
+        <a class="nav-link" routerLink="/theme" routerLinkActive="active">テーマ</a>
       </li>
     </ul>
   </div>
