フッタを追加する。

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,3 +17,8 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+<footer class="footer text-muted bg-dark">
+  <div class="container">
+    <span>Connecting The Dots.</span>
+  </div>
+</footer>
