フッタの文字列を右寄せにする。

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,8 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<footer class="footer text-muted bg-dark">
-  <div class="container">
+<footer class="footer text-muted text-right bg-dark">
+  <div class="container-fluid">
     <span>Connecting The Dots.</span>
   </div>
 </footer>
