--- a/src/app/material/material.component.html
+++ b/src/app/material/material.component.html
@@ -1,3 +1,5 @@
+<div class="row">
+<div class="col-sm">
 <button (click)="goBack()" class="btn btn-default">go back</button>
 <div *ngIf="theme">
 <div><span>themeId: </span>{{theme.themeId}}</div>
@@ -46,4 +48,9 @@
 </div>
 <div *ngIf="!materialDisplay">
   表示する内容がありません。
+</div>
+</div>
+<div class="col-sm">
+  <app-materialdetail></app-materialdetail>
+</div>
 </div>
