下記対応を行う。 ・material.serviceにmaterialを取得する処理を追加 ・material.componentにmaterialを取得処理を呼び出す処理を追加 ・material-list内でmaterialをクリックするとmaterialdetailの内容が更新されるよう修正

--- a/src/app/material/materialdetail/materialdetail.component.html
+++ b/src/app/material/materialdetail/materialdetail.component.html
@@ -1,3 +1,5 @@
-<p>
-  materialdetail works!
-</p>
+<div *ngIf="material; else elseBlock">
+  {{material.title}}<p>
+  {{material.content}}
+</div>
+<ng-template #elseBlock>materialIdをクリックすると詳細が表示されます。</ng-template>
