--- a/src/app/material/material-list/material-list.component.html
+++ b/src/app/material/material-list/material-list.component.html
@@ -1,3 +1,5 @@
+<div class="row">
+<div class="col-sm">
 <button (click)="goBack()" class="btn btn-default">go back</button>
 <div *ngIf="theme">
   <div><span>themeId: </span>{{theme.themeId}}</div>
@@ -35,7 +37,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let material of materials">
-        <td>{{material.materialId}}</td>
+        <td><button (click)="onClick(material)" class="btn btn-link">{{material.materialId}}</button></td>
         <td>{{material.title}}</td>
         <td>{{material.content}}</td>
         <td><button class="delete" title="delete material" class="btn btn-danger"
@@ -46,4 +48,9 @@
 </div>
 <div *ngIf="!materialDisplay">
     表示する内容がありません。
+</div>
+</div>
+<div class="col-sm">
+  <app-materialdetail></app-materialdetail>
+</div>
 </div>
