・material画面のレイアウトの調整（詳細画面と一覧画面）

--- a/src/app/material/material-list/material-list.component.html
+++ b/src/app/material/material-list/material-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm">
+  <div class="col-sm p-2">
     <button (click)="goBack()" class="btn btn-default">go back</button>
     <div *ngIf="theme">
       <div><span>themeId: </span>{{theme.themeId}}</div>
@@ -50,7 +50,7 @@
       表示する内容がありません。
     </div>
   </div>
-  <div class="col-sm">
+  <div class="col-sm p-2">
     <app-materialdetail></app-materialdetail>
   </div>
 </div>
