--- a/src/app/material/materialdetail/materialdetail.component.html
+++ b/src/app/material/materialdetail/materialdetail.component.html
@@ -1,5 +1,15 @@
 <div *ngIf="material; else elseBlock">
-  {{material.title}}<p>
-  {{material.content}}
+  <div class="card border-light mb-3" style="max-width: 60rem;">
+    <div class="card-header">title</div>
+    <div class="card-body">
+      <p class="card-text">{{material.title}}</p>
+    </div>
+  </div>
+  <div class="card border-light mb-3" style="max-width: 60rem;">
+    <div class="card-header">content</div>
+    <div class="card-body">
+      <p class="card-text">{{material.content}}</p>
+    </div>
+  </div>
 </div>
 <ng-template #elseBlock>materialIdをクリックすると詳細が表示されます。</ng-template>
