--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <a *ngFor="let theme of themes" class="col-1-4"
       routerLink="/detail/{{theme.themeId}}">
     <div class="module theme">
-      <h4>{{theme.title}}</h4>
+      <h4>{{theme.title}}({{theme.materialCount}})</h4>
     </div>
   </a>
 </div>
