--- a/src/app/material/materialdetail/materialdetail.component.html
+++ b/src/app/material/materialdetail/materialdetail.component.html
@@ -1,24 +1,25 @@
-<button *ngIf="!isEditMode && material" (click)="onEdit()" class="btn btn-primary mb-3">編集</button>
+<button *ngIf="isDisplayMode" (click)="onEdit()" class="btn btn-primary mb-3">編集</button>
 <button *ngIf="isEditMode" (click)="onCancel()" class="btn btn-warning mb-3">キャンセル</button>
 <button *ngIf="isEditMode" (click)="onUpdate()" class="btn btn-primary mb-3">更新</button>
 <button *ngIf="isRegisterMode" (click)="onRegister()" class="btn btn-primary mb-3">登録</button>
 <div>
-  <div class="card border-light mb-3" style="max-width: 60rem;">
+  <div class="card border-light mb-3 form-title">
     <div class="card-header">title</div>
-    <textarea *ngIf="isRegisterMode" class="form-control" [(ngModel)]="inputMaterial.title" rows="3"></textarea>
-    <textarea *ngIf="isEditMode" class="form-control" [(ngModel)]="inputMaterial.title" rows="3"></textarea>
-    <div *ngIf="!isEditMode && material" class="card-body">
+    <div *ngIf="isRegisterMode || isEditMode" class="card-body">
+      <textarea class="form-control" [(ngModel)]="inputMaterial.title" rows="3"></textarea>
+    </div>
+    <div *ngIf="isDisplayMode" class="card-body">
       <p class="card-text">{{material.title}}</p>
     </div>
   </div>
-  <div class="card border-light mb-3" style="max-width: 60rem;">
+  <div class="card border-light mb-3 form-content">
     <div class="card-header">content</div>
-    <textarea *ngIf="isRegisterMode" class="form-control" [(ngModel)]="inputMaterial.content" rows="3"></textarea>
-    <textarea *ngIf="isEditMode" class="form-control" [(ngModel)]="inputMaterial.content" rows="3"></textarea>
-    <div *ngIf="!isEditMode && material" class="card-body">
+    <div *ngIf="isRegisterMode || isEditMode" class="card-body">
+      <textarea class="form-control" [(ngModel)]="inputMaterial.content" rows="3"></textarea>
+    </div>
+    <div *ngIf="isDisplayMode" class="card-body">
       <p class="card-text">{{material.content}}</p>
     </div>
-    <textarea *ngIf="isRegisterEditMode" class="form-control" [(ngModel)]="inputMaterial.content" rows="3"></textarea>
   </div>
 </div>
 <div *ngIf="!material">materialIdをクリックすると詳細が表示されます。</div>
