--- a/src/app/material/material-list/material-list.component.html
+++ b/src/app/material/material-list/material-list.component.html
@@ -10,6 +10,10 @@
         <label for="content">content</label>
         <input [(ngModel)]="theme.content" placeholder="content" class="form-control" name="content" id="content">
       </div>
+      <div class="form-group form-check">
+        <input type="checkbox" [(ngModel)]="theme.contentDisplayFlg" class="form-check-input" name="contentDisplayFlg" id="contentDisplayFlg">
+        <label for="contentDisplayFlg">content_display_flg</label>
+      </div>
     <button (click)="save()" class="btn btn-primary">save</button>
     </form>
     <div *ngIf="materialDisplay">
