reverseボタンを追加し、ボタンを押すとtitleとcontentを入れ替えるようにする

--- a/src/app/material/material-list/material-list.component.html
+++ b/src/app/material/material-list/material-list.component.html
@@ -17,6 +17,7 @@
     <button (click)="save()" class="btn btn-primary">save</button>
     </form>
     <div *ngIf="materialDisplay">
+      <button (click)="reverse()" class="btn btn-primary float-right">reverse</button>
       <table class="table">
         <thead>
           <tr>
